# navigation_explainer_image

./: CMakeLists.txt  README.md  package.xml  setup.py
include/navigation_explainer/: DataLoader.py  ExplainNavigation.py  lime_image.py
include/navigation_explainer/Dataset1/: cmd_vel.csv  current_goal.csv  teb_global_plan.csv  teb_local_plan.csv
include/navigation_explainer/Input/: global_costmap_data.csv  global_costmap_info.csv  plan.csv
include/navigation_explainer/LIME/: DataLoader.py  ExplainNavigation.py
include/navigation_explainer_image/: DataLoader.py  ExplainNavigation.py  lime_image.py
include/navigation_explainer_image/Dataset1/: amcl_pose.csv  footprints.csv  local_costmap_info.csv  map_data.csv
include/navigation_explainer_image/Input/: map_info.csv  odom.csv  tf_map_odom.csv  tf_odom_map.csv
include/navigation_explainer_image/Output/: cmd_vel.csv
include/tlp/: distance_calculations.h  graph_search.h  h_signature.h  homotopy_class_planner.h  homotopy_class_planner.hpp  my_wrapper.h  obstacles.h  optimal_planner.h  planner_interface.h  pose_se2.h  robot_footprint_model.h  teb_config.h  teb_local_planner_ros.h  timed_elastic_band.h  timed_elastic_band.hpp  visualization.h  visualization.hpp
include/tlp/g2o_types/: base_teb_edges.h  edge_acceleration.h  edge_dynamic_obstacle.h  edge_kinematics.h  edge_obstacle.h  edge_prefer_rotdir.h  edge_shortest_path.h  edge_time_optimal.h  edge_velocity.h  edge_velocity_obstacle_ratio.h  edge_via_point.h  vertex_pose.h
launch/: pni.launch
msg/: FeedbackMsg.msg  TrajectoryMsg.msg
src/: explainer.py
src/tlp/: costmap_wrapper.cpp  graph_search.cpp  homotopy_class_planner.cpp  my_wrapper.cpp  obstacles.cpp  optimal_planner.cpp  pni.cpp  recovery_behaviors.cpp  teb_config.cpp  teb_local_planner_ros.cpp  test_optim_node.cpp  timed_elastic_band.cpp  visualization.cpp
src/tlp/Data/: amcl_pose.csv  cmd_vel.csv  costmap_info.csv  footprint.csv  global_plan.csv  local_plan.csv  local_plans.csv  odom.csv  plan.csv  tf_map_odom.csv  tf_odom_map.csv  transformed_plan.csv
